migrating script to new database

--- a/schema/_migrations.yml
+++ b/schema/_migrations.yml
@@ -1,16 +1,20 @@
 table_name: _migrations
 description: "Internal table used by the migration runner to track which SQL migration scripts have been successfully applied."
+created_at: "2025-06-02"
+updated_at: "2025-06-02"
 owner: "System"
 tags:
   - meta
   - migrations
+
 columns:
+  - name: applied_at
+    description: "The timestamp when the migration was applied."
+    tests:
+      - not_null
+
   - name: filename
     description: "The name of the SQL migration file. Primary Key."
     tests:
       - unique
-      - not_null
-  - name: applied_at
-    description: "The timestamp when the migration was applied."
-    tests:
       - not_null
