--- a/schema/dimUserExercisePreferences.yml
+++ b/schema/dimUserExercisePreferences.yml
@@ -1,17 +1,12 @@
 table_name: dimUserExercisePreferences
 description: "Stores user-specific aliases for exercises, allowing users to customize exercise names."
-owner: "David R."
+created_at: "2025-06-02"
+updated_at: "2025-06-02"
+owner: "David Rusho"
 tags:
   - dimension
   - user_data
 columns:
-  - name: userId
-    description: "Part of the composite Primary Key. Foreign Key referencing dimUser."
-    tests:
-      - not_null
-      - relationships:
-          to: dimUser
-          field: userId
   - name: exerciseId
     description: "Part of the composite Primary Key. Foreign Key referencing dimExercise."
     tests:
@@ -19,7 +14,16 @@ columns:
       - relationships:
           to: dimExercise
           field: exerciseId
+
   - name: userExerciseAlias
     description: "The custom name the user has assigned to the exercise."
     tests:
       - not_null
+
+  - name: userId
+    description: "Part of the composite Primary Key. Foreign Key referencing dimUser."
+    tests:
+      - not_null
+      - relationships:
+          to: dimUser
+          field: userId
