--- a/schema/dimExercisePlan.yml
+++ b/schema/dimExercisePlan.yml
@@ -1,55 +1,55 @@
 table_name: dimExercisePlan
-description: "Dimension table that consolidates a user's current progression state for a specific exercise."
-created_at: "2025-06-02"
-updated_at: "2025-06-02"
-owner: "David Rusho"
+description: Dimension table that consolidates a user's current progression state
+  for a specific exercise.
+created_at: '2025-06-02'
+updated_at: '2025-06-02'
+owner: David Rusho
 tags:
-  - dimension
-  - core
+- dimension
+- core
 columns:
-  - name: currentStepNumber
-    description: "The user's current step in the progression model for this exercise."
-
-  - name: current1rmEstimate
-    description: "The user's current estimated 1-Rep Max for this exercise."
-
-  - name: exercisePlanId
-    description: "The unique identifier for this specific user-exercise plan. Primary Key."
-    tests:
-      - unique
-      - not_null
-
-  - name: exerciseId
-    description: "Foreign Key referencing the exercise this plan is for."
-    tests:
-      - not_null
-      - relationships:
-          to: dimExercise
-          field: exerciseId
-
-  - name: isActive
-    description: "Flag to indicate if this is the currently active plan for the user/exercise (1=Active, 0=Archived)."
-    tests:
-      - not_null
-      - accepted_values:
-          values: [0, 1]
-
-  - name: templateName
-    description: "The default, global name of the workout template this plan originated from."
-
-  - name: targetReps
-    description: "The target number of reps for the current step."
-
-  - name: targetSets
-    description: "The target number of sets for the current step."
-
-  - name: userId
-    description: "Foreign Key referencing the user this plan belongs to."
-    tests:
-      - not_null
-      - relationships:
-          to: dimUser
-          field: userId
-
-  - name: userTemplateAlias
-    description: "The user's custom name for this workout template."
+- name: current1rmEstimate
+  description: The user's current estimated 1-Rep Max for this exercise.
+- name: currentStepNumber
+  description: The user's current step in the progression model for this exercise.
+- name: exerciseId
+  description: Foreign Key referencing the exercise this plan is for.
+  tests:
+  - not_null
+  - relationships:
+      to: dimExercise
+      field: exerciseId
+- name: exercisePlanId
+  description: The unique identifier for this specific user-exercise plan. Primary
+    Key.
+  tests:
+  - unique
+  - not_null
+- name: isActive
+  description: Flag to indicate if this is the currently active plan for the user/exercise
+    (1=Active, 0=Archived).
+  tests:
+  - not_null
+  - accepted_values:
+      values:
+      - 0
+      - 1
+- name: progressionModelId
+  description: ADD A DESCRIPTION FOR THIS NEW COLUMN
+  tests: []
+- name: targetReps
+  description: The target number of reps for the current step.
+- name: targetSets
+  description: The target number of sets for the current step.
+- name: templateName
+  description: The default, global name of the workout template this plan originated
+    from.
+- name: userId
+  description: Foreign Key referencing the user this plan belongs to.
+  tests:
+  - not_null
+  - relationships:
+      to: dimUser
+      field: userId
+- name: userTemplateAlias
+  description: The user's custom name for this workout template.
